sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value getNombreValeur
  var length:Int = getNombreValeur()
                   ^