sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var length:Int = getNombreValeur()
  var ecart:Int = length
  var continuer:Boolean = true
  var i:Int = 0
  while(ecart>1 || continuer){
    if (ecart > 1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i = 0
    while(i+ecart < length){
      if (!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
      }
      i += 1
    }
  }
}